tests/errors/arena_missing_use.ptt
spark {
  a is Arena of int()
  yell(a.len())
}
